# lyon_master_cns_spike_sorting_training

./: README.md
notebooks/: Step01-read-data-and-object-manipulaton.ipynb  Step02-preprocessing.ipynb  Step03-run-sorters.ipynb  Step04-analyze-sorting.ipynb  Step05-curation.ipynb  pyproject.toml
